# muralis

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.git-hooks/: pre-commit
.github/workflows/: ci.yml  release.yml
assets/: muralis-daemon.service  muralis-gui.desktop
muralis-cli/: Cargo.toml
muralis-cli/src/: main.rs
muralis-core/: Cargo.toml
muralis-core/src/: cache.rs  config.rs  crop_overlay.rs  db.rs  error.rs  ipc.rs  lib.rs  models.rs  paths.rs  wallpapers.rs
muralis-core/src/backend/: hyprpaper.rs  mod.rs  monitor.rs  swww.rs
muralis-core/src/sources/: feed.rs  mod.rs  pexels.rs  unsplash.rs  wallhaven.rs
muralis-daemon/: Cargo.toml
muralis-daemon/src/: ipc.rs  main.rs  tray.rs  workspace.rs
muralis-daemon/src/display/: engine.rs  mod.rs  scheduler.rs
muralis-gui/: CMakeLists.txt  Cargo.toml
muralis-gui/qml/: FilterBar.qml  PreviewDrawer.qml  SearchView.qml  StatusBar.qml  Theme.qml  ThumbnailCard.qml  main.qml
muralis-gui/src/: app.rs  main.cpp  main.rs  message.rs  processrunner.cpp  processrunner.h
muralis-gui/src/views/: favorites.rs  mod.rs  preview_overlay.rs  settings.rs  source_tab.rs
muralis-source-feed/: Cargo.toml
muralis-source-feed/src/: lib.rs
muralis-source-pexels/: Cargo.toml
muralis-source-pexels/src/: lib.rs
muralis-source-unsplash/: Cargo.toml
muralis-source-unsplash/src/: lib.rs
muralis-source-wallhaven/: Cargo.toml
muralis-source-wallhaven/src/: lib.rs
