[package]
name = "muralis"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "muralis"
path = "src/main.rs"

[dependencies]
muralis-core = { path = "../muralis-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
