[package]
name = "muralis-gui"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
muralis-core = { path = "../muralis-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
iced = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
