[package]
name = "muralis-source-feed"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
muralis-core = { path = "../muralis-core" }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
toml = { workspace = true }
feed-rs = { workspace = true }
scraper = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }
tokio = { workspace = true }
