[package]
name = "muralis-source-pexels"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
muralis-core = { path = "../muralis-core" }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
toml = { workspace = true }
